--- a/src/main/resources/static/folderdbpassword.html
+++ b/src/main/resources/static/folderdbpassword.html
@@ -61,7 +61,7 @@
 				var $ = layui.$;
 
 				//用户未登录的跳转
-				$.post("http://localhost:8080/user/config/islogin", function(rel) {
+				$.post("/user/config/islogin", function(rel) {
 					if (rel.code === -1) {
 						layer.msg(rel.msg, function() {
 							window.location = "login.html";
@@ -115,7 +115,7 @@
 					';
 				}
 
-				$.post('http://localhost:8080/fodler/db/password/list', function(rel) {
+				$.post('/fodler/db/password/list', function(rel) {
 					if (rel.code === 0) {
 						rel.data.forEach(function(val, inx) {
 							$("#record-box").append(nodeHtmlTmp(val))
@@ -153,7 +153,7 @@
 								_status_code = 2
 							}
 							//修改状态
-							$.post('http://localhost:8080/fodler/db/password/change', {
+							$.post('/fodler/db/password/change', {
 								path: path,
 								code: _status_code
 							}, function(rel) {
@@ -177,7 +177,7 @@
 								yes: function(index, layero) {
 									var _path = path;
 									var _password = $(layero.find('.layui-input[name=password]')).val();
-									$.post('http://localhost:8080/fodler/db/password/modify', {
+									$.post('/fodler/db/password/modify', {
 										path: _path,
 										password: _password
 									}, function(rel) {
@@ -192,7 +192,7 @@
 						})
 						$(".delete-btn").click(function() {
 							var path = $(this).parent().attr("data-path");
-							$.post('http://localhost:8080/fodler/db/password/delete', {
+							$.post('/fodler/db/password/delete', {
 								path: path
 							}, function(rel) {
 								layer.msg(rel.msg);
@@ -212,7 +212,7 @@
 							var _folder = $(layero.find('.layui-input[name=folder]')).val();
 							var _password = $(layero.find('.layui-input[name=password]')).val();
 							console.log(_folder, _password);
-							$.post('http://localhost:8080/fodler/db/password/add', {
+							$.post('/fodler/db/password/add', {
 								folder: _folder,
 								password: _password
 							}, function(rel) {
