--- a/src/main/resources/static/register.html
+++ b/src/main/resources/static/register.html
@@ -102,7 +102,7 @@
 					}
 					console.log(data);
 					$.ajax({
-						url: 'http://localhost:8080/register',
+						url: '/register',
 						type: 'POST',
 						data: data,
 						error: function(err) {
