--- a/src/main/resources/static/documents.html
+++ b/src/main/resources/static/documents.html
@@ -76,7 +76,7 @@
 				var $ = layui.$;
 
 				//用户未登录的跳转
-				$.post("http://localhost:8080/user/config/islogin", function(rel) {
+				$.post("/user/config/islogin", function(rel) {
 					if (rel.code === -1) {
 						layer.msg(rel.msg, function() {
 							window.location = "login.html";
@@ -88,7 +88,7 @@
 					}
 				})
 
-				$.post("http://127.0.0.1:8080/sys/config/get", {
+				$.post("/sys/config/get", {
 					key: "typeview"
 				}, function(status) {
 					if (!status) {
@@ -139,7 +139,7 @@
 				};
 
 				$.ajax({
-					url: 'http://localhost:8080/document/list',
+					url: '/document/list',
 					type: 'POST',
 					success: function(rel) {
 						console.log(rel.msg);
@@ -156,12 +156,12 @@
 								if (type === 'pdf') {
 									var index = layer.open({
 										type: 2,
-										content: "http://127.0.0.1:8080/document/pdf/view?path=" + encodePath,
+										content: "/document/pdf/view?path=" + encodePath,
 										area: ['80%', '80%'],
 										maxmin: true
 									});
 								} else if (type === 'word') {
-									$.post("http://localhost:8080/file/view/office/word",{path:_path},function(rel){
+									$.post("/file/view/office/word",{path:_path},function(rel){
 										if(rel.code === 1){
 											layer.open({
 											  type: 1,
@@ -177,7 +177,7 @@
 										}
 									})
 								} else if (type === 'excel') {
-									$.post("http://localhost:8080/file/view/office/excel",{path:_path},function(rel){
+									$.post("/file/view/office/excel",{path:_path},function(rel){
 										if(rel.code === 1){
 											layer.open({
 											  type: 1,
@@ -193,7 +193,7 @@
 										}
 									})
 								} else if(type === 'ppt') {
-									$.post("http://localhost:8080/file/view/office/ppt",{path:_path},function(rel){
+									$.post("/file/view/office/ppt",{path:_path},function(rel){
 										if(rel.code === 1){
 											layer.open({
 											  type: 1,
@@ -209,7 +209,7 @@
 										}
 									})
 									// layer.msg('功能未实现，将直接下载');
-									// var url = 'http://localhost:8080/opt/super/download?filepath=' + encodePath;
+									// var url = '/opt/super/download?filepath=' + encodePath;
 									// const link = document.createElement('a');
 									// link.href = url;
 									// link.click();
@@ -218,7 +218,7 @@
 							$(".delete-btn").click(function() {
 								var path = $(this).parent().attr("data-path");
 								$.ajax({
-									url: 'http://localhost:8080/opt/delete',
+									url: '/opt/delete',
 									method: 'POST',
 									data: {
 										filepath: path
@@ -236,7 +236,7 @@
 				});
 				//刷新缓存
 				$('#update-cache').click(function () {
-					$.post('http://localhost:8080/class/manage/del/cache',function (rel) {
+					$.post('/class/manage/del/cache',function (rel) {
 						if (rel.code === 0) {
 							location.reload()
 						}else {
