--- a/src/main/resources/static/hidemanage.html
+++ b/src/main/resources/static/hidemanage.html
@@ -60,7 +60,7 @@
 				var $ = layui.$;
 
 				//用户未登录的跳转
-				$.post("http://localhost:8080/user/config/islogin", function(rel) {
+				$.post("/user/config/islogin", function(rel) {
 					if (rel.code === -1) {
 						layer.msg(rel.msg, function() {
 							window.location = "login.html";
@@ -122,7 +122,7 @@
 					';
 				}
 
-				$.post('http://localhost:8080/hide/manage/list', function(rel) {
+				$.post('/hide/manage/list', function(rel) {
 					console.log(rel);
 					if (rel.code === 0) {
 						//渲染
@@ -134,7 +134,7 @@
 						});
 						$(".remove-btn").click(function() {
 							var _id = $(this).attr("data-node-id");
-							$.post('http://localhost:8080/hide/manage/del', {
+							$.post('/hide/manage/del', {
 								id: _id
 							}, function(rel) {
 								console.log(rel);
@@ -156,7 +156,7 @@
 						yes: function(index, layero) {
 							var _path = $(layero.find('.layui-input')).val();
 							console.log(_path);
-							$.post('http://localhost:8080/hide/manage/add', {
+							$.post('/hide/manage/add', {
 								content: _path,
 								type: 1
 							}, function(rel) {
@@ -176,7 +176,7 @@
 						yes: function(index, layero) {
 							var _reg = $(layero.find('.layui-input')).val();
 							console.log(_reg);
-							$.post('http://localhost:8080/hide/manage/add', {
+							$.post('/hide/manage/add', {
 								content: _reg,
 								type: 2
 							}, function(rel) {
