--- a/src/main/resources/static/movies.html
+++ b/src/main/resources/static/movies.html
@@ -80,7 +80,7 @@
 				var $ = layui.$;
 
 				//用户未登录的跳转
-				$.post("http://localhost:8080/user/config/islogin", function(rel) {
+				$.post("/user/config/islogin", function(rel) {
 					if (rel.code === -1) {
 						layer.msg(rel.msg, function() {
 							window.location = "login.html";
@@ -92,7 +92,7 @@
 					}
 				})
 
-				$.post("http://127.0.0.1:8080/sys/config/get", {
+				$.post("/sys/config/get", {
 					key: "typeview"
 				}, function(status) {
 					if (!status) {
@@ -142,7 +142,7 @@
 					';
 				};
 				$.ajax({
-					url: 'http://localhost:8080/movie/list',
+					url: '/movie/list',
 					type: 'POST',
 					success: function(rel) {
 						console.log(rel.msg);
@@ -161,7 +161,7 @@
 									closeBtn: 0,
 									shadeClose: true,
 									area: ['80%'],
-									content: '<video controls="" width="100%" height="100%" preload="" src="http://localhost:8080/movie/file?path=' +
+									content: '<video controls="" width="100%" height="100%" preload="" src="/movie/file?path=' +
 										realpath + '"></video>'
 								});
 							});
@@ -170,7 +170,7 @@
 
 								var path = $(this).parent().attr("data-path");
 								$.ajax({
-									url: 'http://localhost:8080/opt/delete',
+									url: '/opt/delete',
 									method: 'POST',
 									data: {
 										filepath: path
@@ -190,7 +190,7 @@
 				});
 				//刷新缓存
 				$('#update-cache').click(function () {
-					$.post('http://localhost:8080/class/manage/del/cache',function (rel) {
+					$.post('/class/manage/del/cache',function (rel) {
 						if (rel.code === 0) {
 							location.reload()
 						}else {
