--- a/src/main/resources/static/musics.html
+++ b/src/main/resources/static/musics.html
@@ -58,7 +58,7 @@
 				var $ = layui.$;
 
 				//用户未登录的跳转
-				$.post("http://localhost:8080/user/config/islogin", function(rel) {
+				$.post("/user/config/islogin", function(rel) {
 					if (rel.code === -1) {
 						layer.msg(rel.msg, function() {
 							window.location = "login.html";
@@ -70,7 +70,7 @@
 					}
 				})
 
-				$.post("http://127.0.0.1:8080/sys/config/get", {
+				$.post("/sys/config/get", {
 					key: "typeview"
 				}, function(status) {
 					if (!status) {
@@ -130,7 +130,7 @@
 				}
 
 				$.ajax({
-					url: 'http://localhost:8080/music/list',
+					url: '/music/list',
 					type: 'POST',
 					success: function(rel) {
 						console.log(rel.msg);
@@ -153,7 +153,7 @@
 									shade: 0.8,
 									closeBtn: 0,
 									shadeClose: true,
-									content: '<audio src="http://localhost:8080/music/file?path=' + realpath +
+									content: '<audio src="/music/file?path=' + realpath +
 										'" controls="controls" loop="loop" autoplay="autoplay"></audio>'
 								});
 							})
@@ -162,7 +162,7 @@
 								layer.msg("删除文件");
 								var path = $(this).parent().attr("data-path");
 								$.ajax({
-									url: 'http://localhost:8080/opt/delete',
+									url: '/opt/delete',
 									method: 'POST',
 									data: {
 										filepath: path
@@ -180,7 +180,7 @@
 				});
 				//刷新缓存
 				$('#update-cache').click(function () {
-					$.post('http://localhost:8080/class/manage/del/cache',function (rel) {
+					$.post('/class/manage/del/cache',function (rel) {
 						if (rel.code === 0) {
 							location.reload()
 						}else {
