--- a/src/main/resources/static/userconfig.html
+++ b/src/main/resources/static/userconfig.html
@@ -95,7 +95,7 @@
 				}
 
 				//用户未登录的跳转
-				$.post("http://localhost:8080/user/config/islogin", function(rel) {
+				$.post("/user/config/islogin", function(rel) {
 					if (rel.code === -1) {
 						layer.msg(rel.msg, function() {
 							window.location = "login.html";
@@ -107,14 +107,14 @@
 					}
 				})
 				$("#logout-btn").click(function() {
-					$.post('http://127.0.0.1:8080/logout', function(rel) {
+					$.post('/logout', function(rel) {
 						if (rel) {
 							window.location = "login.html";
 						}
 					})
 				})
 				//获取文件夹密码状态
-				$.post("http://localhost:8080/user/config/folder/password/status", function(data) {
+				$.post("/user/config/folder/password/status", function(data) {
 					form.val('folder-password-manage', {
 						'status': data
 					});
@@ -123,7 +123,7 @@
 				$("#change-password-status").click(function() {
 
 					var status = form.val('folder-password-manage').status;
-					$.post("http://localhost:8080/user/config/folder/password/changestatus", {
+					$.post("/user/config/folder/password/changestatus", {
 						status: status
 					}, function(rel) {
 						if (rel.code === 0) {
@@ -133,7 +133,7 @@
 				});
 				$("#get-password-status").click(function() {
 					layer.msg('刷新当前状态');
-					$.post("http://localhost:8080/user/config/folder/password/status", function(data) {
+					$.post("/user/config/folder/password/status", function(data) {
 						form.val('folder-password-manage', {
 							'status': data
 						});
@@ -149,7 +149,7 @@
 					}
 
 				})
-				$.post('http://localhost:8080/user/now', function(rel) {
+				$.post('/user/now', function(rel) {
 					console.log(rel);
 					if (rel.code === 0) {
 						$("#userInfo").append(userInfoNodeTmp("用户名", rel.info.username, false, 'username'));
@@ -174,7 +174,7 @@
 									yes: function(index, layero) {
 										var _value = $(layero.find('.layui-input')).val();
 										console.log(_value);
-										$.post('http://localhost:8080/user/update', {
+										$.post('/user/update', {
 											key: _key,
 											value: _value
 										}, function(rel) {
@@ -197,7 +197,7 @@
 										if (_newpasswd !== _newpasswd2) {
 											layer.msg("密码输入不一致！");
 										} else {
-											$.post('http://localhost:8080/user/updatepasswd', {
+											$.post('/user/updatepasswd', {
 												oldpassword: _oldpasswd,
 												newpassword: _newpasswd
 											}, function(rel) {
@@ -217,7 +217,7 @@
 
 				table.render({
 					elem: '#log-table',
-					url: 'http://127.0.0.1:8080/opt/log/list',
+					url: '/opt/log/list',
 					method: 'post',
 					cellMinWidth: 80 //全局定义常规单元格的最小宽度，layui 2.2.1 新增
 						,
